handler-definition.yaml

# Creating a deployment for the handler server with affinity and tolerations to ensure it deploys specifically on the worker1 node.
# The Handler server uses a Docker image fetched from my public Docker Hub repository.
# In addition, we mount the container's volume to the specified PersistentVolumeClaim (PVC)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: handler-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: handler-deploy
  template:
    metadata:
      labels:
        app: handler-deploy
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: name
                  operator: In
                  values:
                    - worker1
      tolerations:
        - key: "app"
          operator: "Equal"
          value: "blue"
          effect: "NoSchedule"
      containers:
        - name: handler
          image: shubhamdevops2/handler:18
          imagePullPolicy: Always
          resources:
            limits:
              memory: "250Mi"
              cpu: "200m"
            requests:
              memory: "150Mi"
              cpu: "100m"
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: handler-volume
              mountPath: /app
      volumes:
        - name: handler-volume
          persistentVolumeClaim:
            claimName: handler-pvc

---

# Create the service to connect with deployment
apiVersion: v1
kind: Service
metadata:
  name: handler-svc
spec:
  selector:
    app: handler-deploy
  ports:
  - name: handler
    port: 3001
    targetPort: 3001
