mongodb-definition.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deploy
spec:
  selector:
    matchLabels:
      app: mongodb-deploy
  template:
    metadata:
      labels:
        app: mongodb-deploy
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: name
                  operator: In
                  values:
                    - worker1
      tolerations:
        - key: "app"
          operator: "Equal"
          value: "blue"
          effect: "NoSchedule"
      containers:
        - name: mongo
          image: mongo
          imagePullPolicy: Always
          resources:
            limits:
              memory: "450Mi"
              cpu: "400m"
            requests:
              memory: "350Mi"
              cpu: "300m"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-volume
              mountPath: /data/*
      volumes:
        - name: mongodb-volume
          persistentVolumeClaim:
            claimName: mongodb-pvc


---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
spec:
  selector:
    app: mongodb-deploy
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
