urlshorten-definition.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlshorten-deploy
spec:
  selector:
    matchLabels:
      app: urlshorten-deploy
  template:
    metadata:
      labels:
        app: urlshorten-deploy
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: name
                  operator: In
                  values:
                    - worker2
      tolerations:
        - key: "app"
          operator: "Equal"
          value: "red"
          effect: "NoSchedule"
      containers:
        - name: web
          image: shubhamdevops2/urlshorten
          imagePullPolicy: Always
          resources:
            limits:
              memory: "250Mi"
              cpu: "200m"
            requests:
              memory: "150Mi"
              cpu: "100m"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: urlshorten-volume
              mountPath: ~/app
      volumes:
        - name: urlshorten-volume
          persistentVolumeClaim:
            claimName: urlshorten-pvc


---

apiVersion: v1
kind: Service
metadata:
  name: urlshorten-svc
spec:
  selector:
    app: urlshorten-deploy
  ports:
  - name: web
    port: 3000
    targetPort: 3000
